Removed translation bug, repaired dashboard page view on mobiles

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -26,6 +26,10 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  @media only screen and (max-width: $bp-500) {
+    height: 100%;
+  }
 }
 
 .container {
